<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="content_authority">com.example.android.Localweather</string>
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="authenticate">Log in:</string>
    <string name="app_name">LocalWeather</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="temperature_units_array">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string-array name="pref_units_option">
        <item>Celzius</item>
        <item>Ferienheit</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_location_default">Zagreb</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_label">City Name</string>
    <string name="temperature_units">Temperature units</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="default_location">Default location</string>
    <string name="action_map">Action map</string>
    <string name="action_share">Share</string>
    <string name="today">Today</string>
    <string name="tomorow">Tomorow</string>
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>,<xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>
    <string name="format_wind_mph">Wind:
        <xliff:g id="speed">%1$s</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="format_humidity">
    <xliff:g id="humidity">%1$s</xliff:g>
    </string>
    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$s</xliff:g> kmh <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="format_pressure">
        <xliff:g id="pressure">%1$s</xliff:g>
    </string>
    <string name="format_notification">Forecast:
    <xliff:g id="condition">%1$s</xliff:g>High: <xliff:g id="high">%2$s</xliff:g>Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_location_status_key" translatable="false">loc-status</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="no_connection_available">No connection Available or connection slow</string>
        <string name="action_refresh">refresh</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>
    <string name="no_network_info">No weather information available. There is no network!</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="finish">Finish Settings</string>
    <string name="finish_pref_key">finishPreference</string>
    <string name="pref_current_loc_desc">Image for edit text places</string>
    <string name="google_app_id">AIzaSyB5h1BqR__aFSiL6Uh5hhFpFph5lIomvF0</string>
    <string name="attribution_text">Powered by Google</string>
</resources>
