<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.example.android.localweather.widget.MyEditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label"/>

    <ListPreference
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_option"
        android:entryValues="@array/temperature_units_array"
        android:key="@string/pref_units_key"
        android:title="@string/temperature_units" />
    <CheckBoxPreference
        android:defaultValue="@string/pref_enable_notifications_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:buttonTint="@color/colorAccent"
        android:title="@string/pref_enable_notifications_label" />

    <Preference
        android:title="@string/finish"
        android:key="@string/finish_pref_key"/>

</PreferenceScreen>
